--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,11 @@
 <html lang="ar">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Include Bootstrap CSS (latest version) -->
@@ -35,7 +35,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>اجمع مع M&I</title>
+    <title> إلعَبْ + الأعداد
+ </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
